force-app/main/default/objects/NI_Cancellation__c/fields/Specific_Reason__c.field-meta.xml
<CustomField>
    <fullName>Specific_Reason__c</fullName>
    <description>Specific reason the customer is cancelling
Updated NICC-030510</description>
    <inlineHelpText>Specific reason the customer is cancelling</inlineHelpText>
    <label>Specific Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Backlog Cancellation</fullName>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Connectivity</fullName>
            </value>
            <value>
                <fullName>Cost does not justify benefit</fullName>
            </value>
            <value>
                <fullName>Discontinued By NI</fullName>
            </value>
            <value>
                <fullName>End of Free Trial</fullName>
            </value>
            <value>
                <fullName>Expense Reduction</fullName>
            </value>
            <value>
                <fullName>Franchisor</fullName>
            </value>
            <value>
                <fullName>Functional Deficiencies</fullName>
            </value>
            <value>
                <fullName>Internal Migration</fullName>
            </value>
            <value>
                <fullName>Lead volume too low</fullName>
            </value>
            <value>
                <fullName>Management Company</fullName>
            </value>
            <value>
                <fullName>Non-Payment</fullName>
            </value>
            <value>
                <fullName>Not using the system</fullName>
            </value>
            <value>
                <fullName>Ownership Group</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Poor Customer Support</fullName>
            </value>
            <value>
                <fullName>Poor Quality</fullName>
            </value>
            <value>
                <fullName>Too Robust</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>