force-app/main/default/objects/NI_Cancellation__c/fields/Specific_User_Names__c.field-meta.xml
<CustomField>
    <fullName>Specific_User_Names__c</fullName>
    <description>Names of the users if this is a user reduction</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Names of the users if this is a user reduction</inlineHelpText>
    <label>Specific User Names</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>