force-app/main/default/objects/NI_Cancellation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>User Error</fullName>
            </value>
            <value>
                <fullName>Pending Retention</fullName>
                <default>true</default>
                <label>Pending Retention</label>
            </value>
            <value>
                <fullName>Flagged to be Cancelled</fullName>
            </value>
            <value>
                <fullName>Successfully Retained</fullName>
            </value>
            <value>
                <fullName>Late Cancellation Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>