force-app/main/default/objects/NI_Cancellation__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <description>Territory of the Account related to the Deployment Instance</description>
    <formula>TEXT(Deployment_Instance__r.Account.Territory__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Territory of the Account related to the Deployment Instance</inlineHelpText>
    <label>Territory</label>
    <type>Text</type>
</CustomField>