force-app/main/default/objects/NI_Cancellation__c/fields/Updated_in_Activity_Line__c.field-meta.xml
<CustomField>
    <fullName>Updated_in_Activity_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated by Accounting when the record in Activity Line Item has been updated.</description>
    <inlineHelpText>Updated by Accounting when the record in Activity Line Item has been updated.</inlineHelpText>
    <label>Updated Activity Line Item</label>
    <type>Checkbox</type>
</CustomField>