force-app/main/default/objects/NI_Cancellation__c/fields/Updated_in_Softrax__c.field-meta.xml
<CustomField>
    <fullName>Updated_in_Softrax__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated by Accounting when the record in Softrax has been updated</description>
    <inlineHelpText>Updated by Accounting when the record in Softrax has been updated</inlineHelpText>
    <label>Updated in Softrax</label>
    <type>Checkbox</type>
</CustomField>