force-app/main/default/objects/NI_Cancellation__c/recordTypes/Customer_Exit.recordType-meta.xml
<RecordType>
    <fullName>Customer_Exit</fullName>
    <active>false</active>
    <label>Customer Exit</label>
</RecordType>