force-app/main/default/objects/NI_Cancellation__c/recordTypes/Extract_Append.recordType-meta.xml
<RecordType>
    <fullName>Extract_Append</fullName>
    <active>false</active>
    <label>Extract / Append</label>
</RecordType>