force-app/main/default/objects/NI_Cancellation__c/recordTypes/Migration_Upgrade.recordType-meta.xml
<RecordType>
    <fullName>Migration_Upgrade</fullName>
    <active>false</active>
    <label>Migration / Upgrade</label>
</RecordType>