force-app/main/default/objects/NI_Cancellation__c/recordTypes/User_Reduction.recordType-meta.xml
<RecordType>
    <fullName>User_Reduction</fullName>
    <active>false</active>
    <label>User Reduction</label>
</RecordType>