force-app/main/default/objects/NI_Cancellation__c/validationRules/Account_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Required</fullName>
    <active>true</active>
    <description>Do not save cancellation record if Account is not present.</description>
    <errorConditionFormula>ISBLANK(Account__c)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Please enter a value for Account.</errorMessage>
</ValidationRule>