force-app/main/default/objects/NI_Cancellation__c/validationRules/Cancelled_Effective_Date_Greater_Today.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancelled_Effective_Date_Greater_Today</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c,&quot;Cancelled&quot;), Effective_Date__c &gt; TODAY())</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status cannot  be set to &quot;Cancelled&quot; if the Effective Date is in the future.  Set the Status to &quot;Pending&quot; to signify a future cancellation</errorMessage>
</ValidationRule>