force-app/main/default/objects/NI_Cancellation__c/validationRules/Do_Not_Update_Status_to_Cancelled.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_Not_Update_Status_to_Cancelled</fullName>
    <active>false</active>
    <description>Do not update status to Cancelled if Deployment Instance is blank.

Deactivated per NICC-028655</description>
    <errorConditionFormula>ISCHANGED(Status__c) &amp;&amp; ISPICKVAL(Status__c, &apos;Cancelled&apos;) &amp;&amp; ISBLANK(Deployment_Instance__c)</errorConditionFormula>
    <errorMessage>Deployment Instance should not be blank.</errorMessage>
</ValidationRule>