force-app/main/default/objects/NI_Cancellation__c/validationRules/Edit_Restriction_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Edit_Restriction_Status</fullName>
    <active>false</active>
    <errorConditionFormula>AND ( 
    ISCHANGED(Status__c), 
    OR ( 
        ISPICKVAL(Status__c, &quot;Cancelled&quot;), 
        ISPICKVAL(Status__c, &quot;Pending&quot;), 
        ISPICKVAL(Status__c, &quot;Reactivated&quot;) 
    ), 
    $Profile.Name != &quot;NI IT - Standard&quot;, 
    $Profile.Name != &quot;NI Support Managers&quot;, 
    $Profile.Name != &quot;NI Contracts&quot;, 
    $Profile.Name != &quot;NI FinancialForce Accountant&quot;, 
    $Profile.Name != &quot;NI Finance&quot;, 
    $Profile.Name != &quot;NI Administrator&quot;, 
    $Profile.Name != &quot;System Administrator&quot; 
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You are not authorized to set the status of a Cancellation to Cancelled, Pending or Reactivated. Please send an email to DL_CustomerRetention if you need assistance with this Cancellation.</errorMessage>
</ValidationRule>