force-app/main/default/objects/NI_Cancellation__c/validationRules/General_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>General_Reason_Required</fullName>
    <active>false</active>
    <description>Inactivated NICC-026959</description>
    <errorConditionFormula>ISBLANK(TEXT(General_Reason__c))</errorConditionFormula>
    <errorDisplayField>General_Reason__c</errorDisplayField>
    <errorMessage>You must select a General Reason in order to save this NI Cancellation record</errorMessage>
</ValidationRule>