force-app/main/default/objects/NI_Cancellation__c/validationRules/User_Reduction_Number_of_Users.validationRule-meta.xml
<ValidationRule>
    <fullName>User_Reduction_Number_of_Users</fullName>
    <active>false</active>
    <description>The Number of Users Reduced field must be populated for User Reductions</description>
    <errorConditionFormula>AND(ISPICKVAL(General_Reason__c, &apos;User Reduction&apos;), ISBLANK( Number_of_Users_Reduced__c))</errorConditionFormula>
    <errorMessage>You must update the &quot;Number of Users Reduced&quot; field for User Reduction Cancellations</errorMessage>
</ValidationRule>