force-app/main/default/objects/NI_Cancellation__c/validationRules/User_Reduction_Specifc_Users.validationRule-meta.xml
<ValidationRule>
    <fullName>User_Reduction_Specifc_Users</fullName>
    <active>false</active>
    <description>The Specific Users Reduced field must be populated for User Reductions</description>
    <errorConditionFormula>AND(ISPICKVAL(General_Reason__c, &apos;User Reduction&apos;), ISBLANK( Specific_User_Names__c))</errorConditionFormula>
    <errorMessage>You must update the &quot;Specific User Names&quot; field for User Reduction Cancellations</errorMessage>
</ValidationRule>