force-app/main/default/objects/NI_Cancellation__c/listViews/Cancelled_All.listView-meta.xml
<ListView>
    <fullName>Cancelled_All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Create_Cancellation_Case__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Account__c</columns>
    <columns>Account_Number__c</columns>
    <columns>Account_Owner__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Product__c</columns>
    <columns>Product2__c</columns>
    <columns>Renewal_Cancellation_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <label>Cancelled - All</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>