force-app/main/default/objects/NI_Cancellation__c/listViews/Cancelled_New.listView-meta.xml
<ListView>
    <fullName>Cancelled_New</fullName>
    <columns>NAME</columns>
    <columns>Effective_Date__c</columns>
    <columns>Account__c</columns>
    <columns>Cancellation_Notes__c</columns>
    <columns>Product__c</columns>
    <columns>Management_Company__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Working</value>
    </filters>
    <label>CR - Cancelled New and Working</label>
</ListView>