force-app/main/default/objects/NI_Cancellation__c/listViews/Created_w_NEw_Process.listView-meta.xml
<ListView>
    <fullName>Created_w_NEw_Process</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Effective_Date__c</columns>
    <columns>Create_Cancellation_Case__c</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Activity_Line_Item__c</columns>
    <columns>Late_Cancellation__c</columns>
    <columns>Product__c</columns>
    <columns>Product2__c</columns>
    <columns>Renewal_Cancellation_Requester__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>4/11/2018 12:00 AM</value>
    </filters>
    <label>Created w/ NEw Process</label>
</ListView>