force-app/main/default/objects/NI_Cancellation__c/listViews/effective_date_04_19_2018.listView-meta.xml
<ListView>
    <fullName>effective_date_04_19_2018</fullName>
    <columns>NAME</columns>
    <columns>Create_Cancellation_Case__c</columns>
    <columns>Account__c</columns>
    <columns>Activity_Line_Item__c</columns>
    <columns>Late_Cancellation__c</columns>
    <columns>Product__c</columns>
    <columns>Product2__c</columns>
    <columns>Effective_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Late_Cancellation_Approved_Date__c</field>
        <operation>equals</operation>
        <value>2/14/2019</value>
    </filters>
    <label>CX - effective date  &gt;04/19/2018</label>
    <language>en_US</language>
</ListView>