force-app/main/default/objects/NI_Cancellation__c/listViews/F2BC_HRM_dlelphi_LIBRA.listView-meta.xml
<ListView>
    <fullName>F2BC_HRM_dlelphi_LIBRA</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Product__c</columns>
    <columns>Product2__c</columns>
    <columns>Status__c</columns>
    <columns>Create_Cancellation_Case__c</columns>
    <columns>Renewal_Cancellation_Requester__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Flagged to be Cancelled</value>
    </filters>
    <filters>
        <field>Product_Line__c</field>
        <operation>contains</operation>
        <value>HRM,Delphi.fdc,Libra</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>4/11/2018 12:00 AM</value>
    </filters>
    <label>F2BC:  HRM, dlelphi, LIBRA</label>
    <sharedTo>
        <group>NI_Cancellations_Read_Edit_All</group>
    </sharedTo>
</ListView>