force-app/main/default/objects/NI_Cancellation__c/listViews/Flagged_HRM_Libra_FDC.listView-meta.xml
<ListView>
    <fullName>Flagged_HRM_Libra_FDC</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Create_Cancellation_Case__c</columns>
    <columns>Late_Cancellation__c</columns>
    <columns>Product2__c</columns>
    <columns>Product_Line__c</columns>
    <columns>Renewal_Cancellation_Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Line__c</field>
        <operation>contains</operation>
        <value>HRM,Libra,Delphi.FDC</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Flagged to be Cancelled</value>
    </filters>
    <label>Flagged - HRM, Libra, FDC</label>
    <language>en_US</language>
    <sharedTo>
        <group>NI_Cancellations_Read_Edit_All</group>
    </sharedTo>
</ListView>