force-app/main/default/objects/NI_Cancellation__c/listViews/Master_Cancellations.listView-meta.xml
<ListView>
    <fullName>Master_Cancellations</fullName>
    <columns>NAME</columns>
    <columns>Master_Cancellation_Record__c</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Account_Number__c</columns>
    <columns>Contact__c</columns>
    <columns>General_Reason__c</columns>
    <columns>Specific_Reason__c</columns>
    <columns>Competitor_Lost_To__c</columns>
    <columns>Product_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Master_Cancellation_Record__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Master Cancellations</label>
</ListView>