force-app/main/default/objects/NI_Cancellation__c/listViews/Pending_Retention.listView-meta.xml
<ListView>
    <fullName>Pending_Retention</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Anticipated_Revenue_Loss__c</columns>
    <columns>Product__c</columns>
    <columns>Late_Cancellation__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Late_Cancellation_Not_Approved__c</columns>
    <columns>Late_Cancellation_Approved__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending Retention</value>
    </filters>
    <filters>
        <field>Late_Cancellation__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Pending Retention LATE</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>