force-app/main/default/objects/NI_Cancellation__c/listViews/Status_Flagged_to_be_Cancelled.listView-meta.xml
<ListView>
    <fullName>Status_Flagged_to_be_Cancelled</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Product2__c</columns>
    <columns>Create_Cancellation_Case__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Account__c</columns>
    <columns>Anticipated_Revenue_Loss__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Late_Cancellation__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Line__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Flagged to be Cancelled</value>
    </filters>
    <label>Status =  Flagged to be Cancelled</label>
</ListView>